# bangkit-api-backend

./: .env  .firebaserc  .gcloudignore  .gitignore  README.md  charaka-kapi.json  main.py  pyproject.toml  requirements.txt
.firebase/: hosting.cHVibGlj.cache
