[tool.poetry]
name = "bangkit-api-backend"
version = "0.1.0"
description = ""
authors = ["NurrizkyImani <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
flask = "^2.0.1"
uvicorn = "^0.13.4"
firebase-admin = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
